# lead_project

./: README.md  emails.md  pyproject.toml  report.md
src/trade_proj/: crew.py  main.py
src/trade_proj/config/: agents.yaml  tasks.yaml
