[project]
name = "trade_proj"
version = "0.1.0"
description = "TRADE_PROJ using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.0"
]

[project.scripts]
trade_proj = "trade_proj.main:run"
run_crew = "trade_proj.main:run"
train = "trade_proj.main:train"
replay = "trade_proj.main:replay"
test = "trade_proj.main:test"
run_with_trigger = "trade_proj.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
